--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 lto = true
 
 [dependencies]
+rand = "*"
 petgraph = "0.5.1"
 itertools = "0.9.0"
 simple_rand = {git="https://github.com/poyeker/simple_rand.git"}
